# ShorewallNF

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  STATUS.md  mkdocs.yml  pyproject.toml
.claude/agents/: README.md
.claude/commands/: code-reviewer.md  epic-author.md  epic-decomposer.md  fixer.md  implementer.md  merge-readiness.md  (+2 more)
.github/: CODEOWNERS  labels.yml  pull_request_template.md
docs/: .pages  ARCHITECTURE.md  CONTRIBUTING.md  concepts.md  getting-started.md  index.md  lifecycle.md  module-layout.md  operations.md  requirements.txt  walkthrough.md
pipeline/: README.md  labels.md  workflow.md
scripts/: sync-labels
tests/: golden_harness.py  netns_harness.py  test_actions_parser.py  test_adr_wiring.py  test_applier.py  test_cli.py  test_compile.py  test_concepts_doc.py  test_conditionals.py  test_conntrack_helpers.py  test_conntrack_parser.py  test_docs_links.py  test_docs_workflow.py  test_errors.py  test_format_section.py  test_generator.py  test_gitignore.py  test_golden_harness.py  test_interfaces_parser.py  test_ir.py  test_ir_datatypes.py  test_macros.py  test_mangle_generator.py  test_mangle_parser.py  test_module_layout.py  test_netns_clampmss.py  test_netns_connlimit.py  test_netns_conntrack_helper.py  test_netns_disable_ipv6.py  test_netns_harness.py  test_netns_macro_action.py  test_netns_mangle_provider.py  test_netns_named_set.py  test_netns_policy_rate_limit.py  test_netns_providers.py  test_netns_rate_limit.py  test_netns_rpfilter.py  test_netns_safe_apply.py  test_netns_sfilter.py  test_netns_show_connections.py  (+35 more)
(+170 files in other folders)
