[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shorewallnf"
version = "0.0.0"
description = "An nftables-native reimplementation of Shorewall, written in Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }
authors = [{ name = "ShorewallNF contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8"]

[project.scripts]
shorewallnf = "shorewallnf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
markers = [
    "netns: behavioral tier requiring root + ip/nft in a network namespace (select with -m netns)",
]
